--- a/src/components/categories/categories.module.scss
+++ b/src/components/categories/categories.module.scss
@@ -4,28 +4,57 @@
   padding: 10px;
   display: flex;
   flex-direction: column;
+  transition: all 0.3s ease;
 }
 
 .categories {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
+  align-items: baseline;
   padding: 10px;
+  height: 50px;
 }
 
 .category {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   transition: all 0.3s ease;
   justify-content: center;
-  background-color: inherit;
+  color: $black;
   border-radius: 10px;
-  padding: 5px 10px;
+  padding: 5px 12px;
+  align-self: baseline;
+  cursor: pointer;
+
   &:hover {
-    background-color: $hover;
+    color: $hover;
+  }
+
+  .category {
+    visibility: hidden;
+    display: block;
+    opacity: 0;
+    padding: 0;
+    width: 0;
+  }
+
+  .activeCategory {
+    display: flex;
+    visibility: visible;
+    opacity: 1;
+    width: fit-content;
   }
 }
 
 .activeCategory {
-  background-color: $active;
+  color: $active;
+  transition: all 0.3s ease;
+  .category {
+    display: flex;
+    opacity: 1;
+    visibility: visible;
+    width: fit-content;
+  }
 }
