--- a/src/components/filterPanel/filterPanel.module.scss
+++ b/src/components/filterPanel/filterPanel.module.scss
@@ -9,56 +9,139 @@
 .header {
   @include header(46px);
   margin: 0 auto;
+  text-align: center;
+  @media (max-width: 1250px) {
+    font-size: 32px;
+  }
+
+  @media (max-width: 580px) {
+    font-size: 24px;
+  }
 }
 
 .filterPanel {
   padding: 5px;
+
+  @media (max-width: 1250px) {
+    display: none;
+  }
+}
+.filterPanelTablet {
+  padding: 5px;
+  display: none;
+
+  @media (max-width: 1250px) {
+    display: block;
+  }
+}
+
+.sort_filter {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 
 .upperPanel {
   display: flex;
   border: 1px solid #cfcfcf;
-
   background: #f4f4f4;
 }
 
 .total {
-  display: flex;
-  flex-wrap: nowrap;
   font-size: 16px;
-  align-items: center;
+  display: flex;
+  justify-content: center;
   white-space: pre;
-  border-right: 1px solid #cfcfcf;
-
+  background: #f4f4f4;
   padding: 10px;
-  height: 100%;
-  min-width: 300px;
-  width: 300px;
+  border-top: 1px solid $defaultOutline;
+  border-left: 1px solid $defaultOutline;
+
+  @media (max-width: 1250px) {
+    background-color: inherit;
+  }
 }
 
 .sides {
   display: flex;
+  justify-content: center;
 }
 
-.sideBar {
+.left {
+  width: 20%;
+  max-width: 300px;
+  min-width: 200px;
+
+  @media (max-width: 1250px) {
+    display: none;
+  }
+}
+
+.right {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.filterBurgerBtn {
+  display: none;
+
+  @media (max-width: 1250px) {
+    display: block;
+  }
+}
+
+.filterBurger {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba($color: #000000, $alpha: 0.5);
+  position: absolute;
+  .sideBar {
+    position: absolute;
+    display: flex;
+    right: 0;
+  }
+}
+
+.upperPanelTablet {
   display: flex;
   flex-direction: column;
-  min-width: 300px;
-  width: 300px;
-  color: #000;
-  font-size: 17px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 140%;
-  row-gap: 30px;
-  border: 1px solid $defaultOutline;
-  background: $footer;
-  padding-left: 20px;
-  height: fit-content;
-  padding: 10px;
+  row-gap: 20px;
+  align-items: center;
 }
 
-.resetButton {
-  @include button_blue;
-  width: 80px;
+.burger_bg {
+  background-color: rgba(#000000, 0.5);
+  position: absolute;
+  width: 100vw;
+  height: 180vh;
+  left: 100%;
+  z-index: 1;
+}
+
+.activeBurger {
+  left: 0;
+}
+
+.burgerContainer {
+  position: absolute;
+  width: 300px;
+  right: -500px;
+  top: 50%;
+  transition: all 0.3s ease;
+}
+
+.burgerContainerActive {
+  right: 0;
+}
+
+.displayBlock {
+  display: block;
+}
+
+.filterBlock {
+  @include text_def(16px);
+  display: flex;
+  align-items: center;
+  cursor: pointer;
 }
