--- a/src/components/pagination/paginaiton.module.scss
+++ b/src/components/pagination/paginaiton.module.scss
@@ -8,6 +8,7 @@
   border: 1px solid $defaultOutline;
   background: $footer;
   padding: 10px;
+  margin-top: 10px;
 
   button {
     border-radius: 100px;
@@ -25,7 +26,7 @@
       cursor: default;
 
       svg {
-        filter: brightness(1.5);
+        filter: brightness(2);
       }
     }
   }
