--- a/src/components/search/search.module.scss
+++ b/src/components/search/search.module.scss
@@ -8,6 +8,11 @@
   background: url('../../assets/img/svg/search_icon.svg') no-repeat 0% 50%;
   width: 100%;
 
+  @media (max-width: 1250px) {
+    border: 1px solid $defaultOutline;
+    background: url('../../assets/img/svg/search_icon.svg') no-repeat 100% 50%;
+  }
+
   input {
     width: 100%;
     border: none;
