--- a/src/pages/product/product.module.scss
+++ b/src/pages/product/product.module.scss
@@ -2,7 +2,7 @@
 
 .container {
   max-width: 90vw;
-  margin: 30px 0 160px;
+  margin: 30px auto 160px auto;
   padding: 30px;
   border-radius: 5px;
   outline: 1px solid $defaultOutline;
