--- a/src/components/filterPanel/filterPanel.module.scss
+++ b/src/components/filterPanel/filterPanel.module.scss
@@ -8,7 +8,7 @@
 
 .header {
   @include header(46px);
-  margin: 0 auto;
+  margin: 20px auto;
   text-align: center;
   @media (max-width: 1250px) {
     font-size: 32px;
@@ -45,18 +45,21 @@
 .upperPanel {
   display: flex;
   border: 1px solid #cfcfcf;
+  border-left: none;
   background: #f4f4f4;
+  height: 40px;
 }
 
 .total {
   font-size: 16px;
   display: flex;
   justify-content: center;
+  align-items: center;
   white-space: pre;
   background: #f4f4f4;
-  padding: 10px;
-  border-top: 1px solid $defaultOutline;
-  border-left: 1px solid $defaultOutline;
+  padding: 0 10px;
+  border-bottom: 1px solid #cfcfcf;
+  height: 40px;
 
   @media (max-width: 1250px) {
     background-color: inherit;
@@ -72,6 +75,8 @@
   width: 20%;
   max-width: 300px;
   min-width: 200px;
+  border: 1px solid $defaultOutline;
+  height: fit-content;
 
   @media (max-width: 1250px) {
     display: none;
