--- a/src/components/filterPanel/sideBar/sideBar.module.scss
+++ b/src/components/filterPanel/sideBar/sideBar.module.scss
@@ -20,3 +20,16 @@
   @include button_blue;
   width: 80px;
 }
+
+.closeButton {
+  border: none;
+  cursor: pointer;
+  width: fit-content;
+  padding: 10px;
+}
+
+.upper {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
