--- a/src/pages/product/modalSlider/modalSlider.module.scss
+++ b/src/pages/product/modalSlider/modalSlider.module.scss
@@ -34,9 +34,10 @@
   height: 30px;
   background: $accent;
   border-radius: 50%;
-  padding: 9px 0 4px 16px;
   z-index: 51;
   transition: all 0.3s ease;
+  display: flex;
+  justify-content: center;
 
   &:hover {
     background: $hover;
