feat: implemented the addition of the user's address

--- a/src/components/profile/form/form.module.scss
+++ b/src/components/profile/form/form.module.scss
@@ -8,6 +8,9 @@
 
   .select {
     background-image: none !important;
+    &:disabled {
+      color: $defaultInput;
+    }
   }
 }
 
@@ -22,6 +25,10 @@
     background: $footer;
     color: $accent;
   }
+}
+
+.default-input {
+  color: $defaultInput;
 }
 
 .errors {
