--- a/src/components/categories/categories.module.scss
+++ b/src/components/categories/categories.module.scss
@@ -12,8 +12,7 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: baseline;
-  padding: 10px;
-  height: 50px;
+  padding: 5px 0;
 }
 
 .category {
@@ -27,34 +26,31 @@
   padding: 5px 12px;
   align-self: baseline;
   cursor: pointer;
+  font-weight: 500;
 
   &:hover {
     color: $hover;
-  }
-
-  .category {
-    visibility: hidden;
-    display: block;
-    opacity: 0;
-    padding: 0;
-    width: 0;
-  }
-
-  .activeCategory {
-    display: flex;
-    visibility: visible;
     opacity: 1;
-    width: fit-content;
   }
 }
 
 .activeCategory {
   color: $active;
   transition: all 0.3s ease;
+
   .category {
     display: flex;
-    opacity: 1;
+
     visibility: visible;
     width: fit-content;
+  }
+}
+
+.subCategory {
+  opacity: 0.7;
+  font-weight: 400;
+
+  &.activeCategory {
+    opacity: 1;
   }
 }
