feat: update display user address

--- a/src/components/profile/form/form.module.scss
+++ b/src/components/profile/form/form.module.scss
@@ -8,9 +8,7 @@
 
   .select {
     background-image: none !important;
-    &:disabled {
-      color: $defaultInput;
-    }
+    appearance: none;
   }
 }
 
