refactor: catlogSlice and filterSlice

--- a/src/components/productsLayout/productCard/productCard.module.scss
+++ b/src/components/productsLayout/productCard/productCard.module.scss
@@ -28,7 +28,8 @@
     color: $black;
     font-size: 18px;
     width: 80%;
-    margin-bottom: 20px;
+    margin: 10px 0 10px 0;
+    height: 40px;
   }
 
   img {
