--- a/src/components/profile/form/form.module.scss
+++ b/src/components/profile/form/form.module.scss
@@ -10,6 +10,13 @@
     background-image: none !important;
     appearance: none;
   }
+
+  @media (max-width: 600px) {
+    img {
+      width: 20px;
+      height: 20px;
+    }
+  }
 }
 
 .input {
@@ -18,6 +25,10 @@
   width: 100%;
   box-sizing: border-box;
   font-size: 15px;
+
+  @media (max-width: 600px) {
+    font-size: 10px;
+  }
 
   &:focus {
     background: $footer;
