--- a/src/components/categories/categories.module.scss
+++ b/src/components/categories/categories.module.scss
@@ -53,3 +53,18 @@
     opacity: 1;
   }
 }
+
+.breadCrumb {
+  display: flex;
+  align-items: center;
+  padding: 5px;
+  opacity: 0.7;
+  color: $gray;
+  width: fit-content;
+  div {
+    cursor: pointer;
+    padding: 0 5px;
+    text-decoration: underline;
+    font-weight: 700;
+  }
+}
