chore: linting changes

--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -173,11 +173,9 @@
     position: absolute;
     top: 12%;
 
-    @if $direction =='next' {
+    @if $direction == 'next' {
       left: 22%;
-    }
-
-    @else {
+    } @else {
       left: 24%;
     }
 
