--- a/src/components/aboutUs/generalInfo.module.scss
+++ b/src/components/aboutUs/generalInfo.module.scss
@@ -5,6 +5,7 @@
   padding: 0 30px 30px;
   border-radius: 5px;
   outline: 1px solid $accent;
+  overflow: hidden;
 }
 
 .collaboration {
@@ -27,7 +28,7 @@
 }
 
 .collaboration-image {
-  margin-right: -30px
+  margin-right: -115px;
 }
 
 .educational-program {
@@ -58,5 +59,45 @@
     top: -15px;
     left: 16px;
     z-index: -1;
+  }
+}
+
+@media (max-width: 1050px) {
+  .general-info {
+    padding: 20px 15px 30px;
+  }
+
+  .collaboration {
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 1050px) {
+  .collaboration {
+    flex-direction: column;
+  }
+
+  .collaboration-info,
+  .educational-program {
+    max-width: 100%;
+
+    h3,
+    p {
+      text-align: center
+    }
+  }
+
+  .collaboration-image {
+    margin-right: -120px;
+  }
+
+  .educational-program {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .educational-image {
+    margin-right: 150px;
   }
 }
