--- a/src/components/aboutUs/developers/developer.module.scss
+++ b/src/components/aboutUs/developers/developer.module.scss
@@ -83,3 +83,33 @@
     }
   }
 }
+
+@media (max-width: 750px) {
+  .head {
+    h3 {
+      text-align: center;
+    }
+  }
+
+  .body {
+    flex-direction: column;
+    padding: 20px 15px;
+  }
+
+  .developer-photo {
+    padding: 0 20px 20px;
+  }
+
+  .about-developer {
+    padding: 20px 0 0 0;
+
+    h5,
+    p {
+      text-align: center;
+    }
+  }
+
+  .github {
+    justify-content: center;
+  }
+}
