refactor: change file structure

--- a/src/pages/about/about.module.scss
+++ b/src/pages/about/about.module.scss
@@ -1,7 +1,8 @@
-@import "../../scss/mixins.scss";
+@import "../../scss/allVariables.scss";
 
 .container {
   max-width: 1216px;
+  padding: 0 10px;
 }
 
 .page-title {
