--- a/src/components/filterPanel/search/search.module.scss
+++ b/src/components/filterPanel/search/search.module.scss
@@ -1,16 +1,17 @@
-@import '../../scss/allVariables.scss';
+@import '../../../scss/allVariables.scss';
 
 .container {
   color: #555;
   display: flex;
   padding: 2px 30px;
   border: none;
-  background: url('../../assets/img/svg/search_icon.svg') no-repeat 0% 50%;
+  background: url('../../../assets/img/svg/search_icon.svg') no-repeat 0% 50%;
   width: 100%;
 
   @media (max-width: 1250px) {
     border: 1px solid $defaultOutline;
-    background: url('../../assets/img/svg/search_icon.svg') no-repeat 100% 50%;
+    background: url('../../../assets/img/svg/search_icon.svg') no-repeat 100%
+      50%;
   }
 
   input {
