--- a/src/components/filterPanel/productsLayout/productCard/productCard.module.scss
+++ b/src/components/filterPanel/productsLayout/productCard/productCard.module.scss
@@ -40,9 +40,27 @@
   .attributes {
     display: flex;
     flex-direction: column;
-    row-gap: 8px;
+    row-gap: 6px;
     @include text_transparent(15px);
-    margin-bottom: 20px;
+    margin-bottom: 16px;
+
+    ul {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      li {
+        padding: 2px 0;
+        margin: 0 auto;
+        list-style: none;
+        display: flex;
+        text-align: center;
+
+        .name {
+          font-weight: 700;
+        }
+      }
+    }
   }
 }
 
