--- a/src/pages/cart/cart.module.scss
+++ b/src/pages/cart/cart.module.scss
@@ -1,27 +1,33 @@
 @import '../../scss/allVariables.scss';
 
+.container {
+  width: 100%;
+}
+
+.content {
+  display: flex;
+  width: 100%;
+  column-gap: 20px;
+  row-gap: 20px;
+  justify-content: center;
+
+  @media (max-width: 1000px) {
+    flex-direction: column-reverse;
+    align-items: center;
+
+    .cardsContainer {
+      width: 90%;
+    }
+  }
+}
+
 .cardsContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
   row-gap: 20px;
-  width: 100%;
-}
 
-.productCard {
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  row-gap: 10px;
-  font-size: 16px;
-  border-radius: 5px;
-  outline: 1px solid $defaultOutline;
-  width: 80%;
-  transition: all 0.3s ease;
-
-  &:hover {
-    outline: 1px solid $accent;
-    transform: translateY(-5px);
-    box-shadow: 4px 4px 0px 0px $accent;
+  @media (max-width: 1000px) {
+    width: 90%;
   }
 }
