--- a/src/components/faq/faq.module.scss
+++ b/src/components/faq/faq.module.scss
@@ -4,7 +4,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 40px;
+  margin: 0 5px 40px;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 .textContent {
@@ -22,6 +23,7 @@
 
 @media (max-width: 1240px) {
   .questions_container {
+    margin-top: 15px;
     row-gap: 10px;
   }
 }
