--- a/src/components/advantages/advantages.module.scss
+++ b/src/components/advantages/advantages.module.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   margin-top: 100px;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 .textContent {
@@ -24,9 +25,7 @@
 }
 
 @media (max-width: 850px) {
-  .textContent {
-    h2 {
-      font-size: 26px;
-    }
+  .container {
+    margin-top: 60px;
   }
 }
