--- a/src/components/header/nav/navigation.module.scss
+++ b/src/components/header/nav/navigation.module.scss
@@ -1,3 +1,5 @@
+@import '../../../scss/allVariables.scss';
+
 .nav {
   display: flex;
   list-style: none;
@@ -5,6 +7,10 @@
   margin: 28px 0;
   column-gap: 46px;
   color: #323232;
+
+  li {
+    @include link_hover;
+  }
 }
 
 .center {
@@ -15,6 +21,10 @@
   margin: 28px 0 20px 0;
   column-gap: 46px;
   color: #323232;
+
+  li {
+    @include link_hover;
+  }
 }
 
 @media (max-width: 1220px) {
