--- a/src/components/categories/categories.module.scss
+++ b/src/components/categories/categories.module.scss
@@ -34,7 +34,7 @@
 }
 
 .activeCategory {
-  color: $active;
+  color: $black;
   transition: all 0.3s ease;
 
   .category {
@@ -57,10 +57,14 @@
 .breadCrumb {
   display: flex;
   align-items: center;
-  padding: 5px;
+  padding: 8px 5px;
   opacity: 0.7;
   color: $gray;
-  width: fit-content;
+  width: 99.2%;
+  margin: 10px 5px 0;
+  background: $footer;
+  border: 1px solid $defaultOutline;
+
   div {
     cursor: pointer;
     padding: 0 5px;
