--- a/src/components/filterPanel/productsLayout/products.module.scss
+++ b/src/components/filterPanel/productsLayout/products.module.scss
@@ -7,5 +7,11 @@
   column-gap: 20px;
   row-gap: 30px;
   background-color: #fff;
-  padding-top: 50px;
+  padding-top: 30px;
+}
+
+@media(max-width: 1250px) {
+  .container {
+    justify-content: space-between;
+  }
 }
