--- a/src/components/filterPanel/range-slider/price/range-slider.module.scss
+++ b/src/components/filterPanel/range-slider/price/range-slider.module.scss
@@ -5,11 +5,11 @@
   padding: 10px;
   display: flex;
   flex-direction: column;
-  width: 85%;
 
   p {
     font-size: 16px;
-    font-weight: 600;
+    font-weight: 500;
+    opacity: 0.5;
   }
 }
 
@@ -17,43 +17,14 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 0 10px;
 }
 
 .range {
-  width: 90%;
+  width: 100%;
   position: relative;
   margin: 15px 0 30px 0;
   display: flex;
-}
-
-input[type='range'] {
-  appearance: none;
-  -webkit-appearance: none;
-  width: 100%;
-  background: transparent;
-  position: absolute;
-  left: 0;
-}
-
-input[type='range']::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  height: 15px;
-  width: 15px;
-  border-radius: 50%;
-  background: $hover;
-  cursor: pointer;
-  margin-top: -5px;
-  position: relative;
-  z-index: 1;
-}
-
-input[type='range']::-webkit-slider-runnable-track {
-  width: 100%;
-  height: 5px;
-  background: #e8e8e8;
-  border-radius: 3px;
-  border: none;
+  @include input_range;
 }
 
 .dNone {
