--- a/src/components/filterPanel/range-slider/stock/range-slider.module.scss
+++ b/src/components/filterPanel/range-slider/stock/range-slider.module.scss
@@ -5,11 +5,11 @@
   padding: 10px;
   display: flex;
   flex-direction: column;
-  width: 85%;
 
   p {
     font-size: 16px;
-    font-weight: 600;
+    font-weight: 500;
+    opacity: 0.5;
   }
 }
 
@@ -17,14 +17,14 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 0 10px;
 }
 
 .range {
-  width: 90%;
+  width: 100%;
   position: relative;
   margin: 15px 0 30px 0;
   display: flex;
+  @include input_range;
 }
 
 input[type='range'] {
