--- a/src/components/discountBanner/discountBanner.module.scss
+++ b/src/components/discountBanner/discountBanner.module.scss
@@ -33,10 +33,10 @@
   @include text;
   font-size: 20px;
   color: #fff;
-  justify-content: space-around;
+  justify-content: space-between;
   margin-top: 30px;
   align-items: center;
-  padding: 20px;
+  padding: 20px 40px;
   border-top: 1px dashed rgba($color: #fff, $alpha: 0.7);
 }
 
