--- a/src/components/discountBanner/discountBanner.module.scss
+++ b/src/components/discountBanner/discountBanner.module.scss
@@ -4,28 +4,40 @@
   display: flex;
   flex-direction: column;
   color: #fff;
-  padding: 40px 20px;
+  padding: 40px 20px 20px;
   margin-top: 100px;
-  background: url('../../assets/img/png/gift.png') no-repeat 100% 50%;
+  background: url('../../assets/img/png/gift.png') no-repeat 102% 60%;
   background-color: $accent;
-  min-height: 360px;
+  font-family: 'Ubuntu', sans-serif;
+  border-radius: 5px;
 }
 
 .content {
-  width: 75%;
+  width: 80%;
+  padding-right: 50px;
 
   h2 {
     @include header(46px);
     color: #fff;
-    text-align: center;
-    margin: 0 auto;
+    text-align: left;
+    margin-left: 70px;
+    width: 80%;
   }
+}
+
+.dash-line {
+  height: 1px;
+  width: 99%;
+  background-image: linear-gradient(90deg, white, white 75%, transparent 75%, transparent 100%);
+  background-size: 40px 1px;
+  border: none;
+  opacity: 0.6;
 }
 
 .dicounts {
   display: flex;
   flex-direction: column;
-  margin-top: 40px;
+  margin: 40px 0 0 50px;
 }
 
 .discount {
@@ -33,32 +45,114 @@
   @include text;
   font-size: 20px;
   color: #fff;
-  justify-content: space-around;
-  margin-top: 30px;
+  margin: 10px 0;
   align-items: center;
   padding: 20px;
-  border-top: 1px dashed rgba($color: #fff, $alpha: 0.7);
+
+  p {
+    padding: 0 20px;
+  }
+}
+
+.discount-container {
+  width: 90%;
 }
 
 .code {
   padding: 5px 10px;
   color: $black-text;
-  @include text_def(20px);
+  @include text_def(19px);
   background-color: #fff;
-  box-shadow: 4px 4px 0px 0px $active;
+  box-shadow: 6px 6px 0px 0px $hover;
   outline: 1px solid $defaultOutline;
   border-radius: 5px;
+  font-weight: 600;
 }
 
 .applyBtn {
   @include button_white;
-  background-color: #fff;
+  background-color: white;
   color: $black-text;
   border: none;
+  outline: 1px solid $accent;
   @include text;
   font-size: 17px;
+  width: 120px;
+  cursor: pointer;
 
   &:hover {
     border: none;
+    outline: 1px solid $accent;
+  }
+
+  &:active {
+    border: none;
+    outline: 1px solid $active;
+  }
+}
+
+@media (max-width: 1050px) {
+  .container {
+    margin-top: 70px;
+    background: url('../../assets/img/png/gift.png') no-repeat 95% 3%;
+    background-size: 0;
+    background-color: $accent;
+  }
+
+  .content {
+    width: 100%;
+    padding-right: 0;
+
+    h2 {
+      margin: 0 0 50px 20px;
+      width: 100%;
+      text-align: center;
+    }
+  }
+
+  .dicounts {
+    margin: 40px 0 0 20px;
+  }
+
+  .discount {
+    justify-content: center;
+
+    p {
+      padding: 20px;
+    }
+  }
+
+  .discount-container {
+    width: 100%;
+  }
+}
+
+@media (max-width: 670px) {
+  .container {
+    padding: 37% 20px 20px;
+    background: url('../../assets/img/png/gift.png') no-repeat 55% 4%;
+    background-size: 25%;
+    background-color: $accent;
+  }
+
+  .content {
+    h2 {
+      font-size: calc(10px + 4vmin);
+      width: 90%;
+      margin: 0 auto;
+    }
+  }
+
+  .dicounts {
+    margin: 40px 0 0 10px;
+  }
+
+  .discount {
+    flex-direction: column;
+
+    p {
+      text-align: center;
+      font-size: 17px;
+    }
   }
 }
