fix: price discount count

--- a/src/components/orderInfo/discount/discount.module.scss
+++ b/src/components/orderInfo/discount/discount.module.scss
@@ -25,6 +25,7 @@
     padding: 10px 20px;
     display: flex;
     justify-content: space-between;
+    cursor: pointer;
 
     button {
       border: none;
