--- a/src/components/basketproductCard/basketProdyuctCard.module.scss
+++ b/src/components/basketproductCard/basketProdyuctCard.module.scss
@@ -24,12 +24,12 @@
 }
 
 .image {
-  max-width: 260px;
+  max-width: 250px;
   display: flex;
   align-items: center;
 
   img {
-    max-width: 260px;
+    max-width: 250px;
   }
 }
 
@@ -66,7 +66,7 @@
   position: absolute;
   transition: all 0.3s ease;
   top: 22px;
-  right: 0;
+  right: 10px;
   background: none;
   border: none;
   cursor: pointer;
