--- a/src/pages/cart/cart.module.scss
+++ b/src/pages/cart/cart.module.scss
@@ -16,6 +16,7 @@
   column-gap: 20px;
   row-gap: 20px;
   justify-content: center;
+  margin-top: 32px;
 
   @media (max-width: 1000px) {
     flex-direction: column-reverse;
