chore: linting changes

--- a/src/components/filterPanel/sideBar/sideBar.module.scss
+++ b/src/components/filterPanel/sideBar/sideBar.module.scss
@@ -17,7 +17,7 @@
 .resetButton {
   @include button_white;
   width: 100%;
-  font-family: "Ubuntu", sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   font-size: 14px;
   cursor: pointer;
 }
