--- a/src/components/filterPanel/filterPanel.module.scss
+++ b/src/components/filterPanel/filterPanel.module.scss
@@ -9,7 +9,7 @@
   h3 {
     font-size: 18px;
     font-weight: 500;
-    margin-bottom: 10px
+    margin-bottom: 10px;
   }
 
   input[type='checkbox'] {
