--- a/src/components/filterPanel/filterPanel.module.scss
+++ b/src/components/filterPanel/filterPanel.module.scss
@@ -147,8 +147,12 @@
   position: absolute;
   width: 300px;
   right: -500px;
-  top: 20vh;
+  top: 15vh;
   transition: all 0.3s ease;
+
+  div {
+    row-gap: 10px;
+  }
 }
 
 .burgerContainerActive {
