--- a/src/pages/cart/cart.module.scss
+++ b/src/pages/cart/cart.module.scss
@@ -13,7 +13,7 @@
 .content {
   display: flex;
   width: 100%;
-  column-gap: 20px;
+  column-gap: 35px;
   row-gap: 20px;
   justify-content: center;
   margin-top: 32px;
@@ -33,6 +33,7 @@
   flex-direction: column;
   align-items: center;
   row-gap: 20px;
+  width: 90%;
 
   @media (max-width: 1000px) {
     width: 90%;
