feat: add button to remove product from cart

--- a/src/components/filterPanel/productsLayout/productCard/productCard.module.scss
+++ b/src/components/filterPanel/productsLayout/productCard/productCard.module.scss
@@ -85,6 +85,15 @@
   }
 }
 
+.removeToCart {
+  background-color: $while;
+  color: $black;
+  border: 1px solid $black;
+  &:hover {
+    background-color: $footer;
+  }
+}
+
 @media (max-width: 1050px) {
   .product_container {
     width: 48%;
