--- a/src/components/basketproductCard/basketProdyuctCard.module.scss
+++ b/src/components/basketproductCard/basketProdyuctCard.module.scss
@@ -8,7 +8,7 @@
   outline: 1px solid $defaultOutline;
   width: 100%;
   transition: all 0.3s ease;
-  padding: 20px 30px;
+  padding: 20px 30px 0 20px;
   position: relative;
 
   &:hover {
@@ -38,7 +38,7 @@
   display: flex;
   flex-direction: column;
   row-gap: 10px;
-  width: 40%;
+  width: 50%;
   font-size: 15px;
 
   @media (max-width: 650px) {
@@ -51,6 +51,13 @@
       text-align: center;
     }
   }
+}
+
+.price_quantity {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .productName {
