--- a/src/components/basketproductCard/quantity/quantity.module.scss
+++ b/src/components/basketproductCard/quantity/quantity.module.scss
@@ -3,18 +3,18 @@
 .container {
   display: flex;
   flex-wrap: nowrap;
-  column-gap: 30px;
-  padding: 5px 25px;
+  column-gap: 20px;
+  padding: 0 15px;
   background-color: #dfe1e3;
   width: fit-content;
   color: #000;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 140%;
 
   button {
     background: none;
     border: none;
     cursor: pointer;
-    padding: 5px 10px;
+    padding: 5px 5px;
   }
 }
