--- a/src/pages/cart/cart.module.scss
+++ b/src/pages/cart/cart.module.scss
@@ -40,9 +40,21 @@
   }
 }
 
-.emptyMsg {
+.pendingMsg {
   width: 80%;
   padding: 50px;
   text-align: center;
   @include header(50px);
+}
+
+.emptyCart {
+  margin: 120px 0;
+  max-width: 450px;
+  color: #030303;
+  text-align: center;
+  font-family: Ubuntu;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 140%; /* 28px */
 }
