--- a/src/pages/product/product.module.scss
+++ b/src/pages/product/product.module.scss
@@ -129,6 +129,15 @@
   @include button;
 }
 
+.removeToCart {
+  background-color: $while;
+  color: $black;
+  border: 1px solid $black;
+  &:hover {
+    background-color: $footer;
+  }
+}
+
 @media (max-width: 1000px) {
   .container {
     max-width: 74vw;
