feat: update button sold out cart in basket

--- a/src/pages/product/product.module.scss
+++ b/src/pages/product/product.module.scss
@@ -129,6 +129,14 @@
   @include button;
 }
 
+.soldOut {
+  &:disabled {
+    background-color: $footer;
+    color: $black;
+    cursor: none;
+  }
+}
+
 .removeToCart {
   background-color: $while;
   color: $black;
