--- a/src/components/filterPanel/productsLayout/productCard/productCard.module.scss
+++ b/src/components/filterPanel/productsLayout/productCard/productCard.module.scss
@@ -85,6 +85,14 @@
   }
 }
 
+.soldOut {
+  &:disabled {
+    background-color: $footer;
+    color: $black;
+    cursor: none;
+  }
+}
+
 .removeToCart {
   background-color: $while;
   color: $black;
