--- a/src/pages/product/product.module.scss
+++ b/src/pages/product/product.module.scss
@@ -133,7 +133,7 @@
   &:disabled {
     background-color: $footer;
     color: $black;
-    cursor: none;
+    cursor: url('../../assets/img/svg/closeIcon.svg'), auto;
   }
 }
 
