--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -14,6 +14,11 @@
   justify-content: space-between;
   border-bottom: $border;
   padding: 25px 20px;
+
+  @media (max-width: 550px) {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 a {
