--- a/src/components/orderInfo/orderInfo.module.scss
+++ b/src/components/orderInfo/orderInfo.module.scss
@@ -25,4 +25,13 @@
   @media (max-width: 1000px) {
     flex-direction: row;
   }
+
+  @media (max-width: 650px) {
+    padding: 15px;
+    flex-direction: column;
+  }
+
+  @media (max-width: 450px) {
+    padding: 5px;
+  }
 }
